--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - QUARKUS_DATASOURCE_KIND=postgresql
       - QUARKUS_DATASOURCE_METRICS_ENABLED=true
       #JAEGER ENV
-      - QUARKUS_JAEGER_ENDPOINT=http://jaeger:4317
+      - QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4317
       #GRAYLOG
       - QUARKUS_LOG_HANDLER_GELF_HOST=graylog
       - QUARKUS_LOG_HANDLER_GELF_PORT=12201
@@ -51,7 +51,7 @@ services:
       - QUARKUS_DATASOURCE_METRICS_ENABLED=true
       - PORT=8083
       #JAEGER ENV
-      - QUARKUS_JAEGER_ENDPOINT=http://jaeger:4317
+      - QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4317
       #GRAYLOG
       - QUARKUS_LOG_HANDLER_GELF_HOST=graylog
       - QUARKUS_LOG_HANDLER_GELF_PORT=12201
@@ -70,7 +70,7 @@ services:
       - QUARKUS_DATASOURCE_METRICS_ENABLED=true
       - PORT=8082
       #JAEGER ENV
-      - QUARKUS_JAEGER_ENDPOINT=http://jaeger:4317
+      - QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://jaeger:4317
       #GRAYLOG
       - QUARKUS_LOG_HANDLER_GELF_HOST=graylog
       - QUARKUS_LOG_HANDLER_GELF_PORT=12201
@@ -81,12 +81,12 @@ services:
 ###########
   jaeger:
     image: jaegertracing/all-in-one:latest
-    # ports:
-    #   - "16686:16686" # Jaeger UI
-    #   - "14268:14268" # Receive legacy OpenTracing traces, optional
-    #   - "4317:4317"   # OTLP gRPC receiver
-    #   - "4318:4318"   # OTLP HTTP receiver, not yet used by Quarkus, optional
-    #   - "14250:14250" # Receive from external otel-collector, optional
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "14268:14268" # Receive legacy OpenTracing traces, optional
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver, not yet used by Quarkus, optional
+      - "14250:14250" # Receive from external otel-collector, optional
     environment:
       - COLLECTOR_OTLP_ENABLED=true
 
