--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
       - ./sql/postagem.sql:/docker-entrypoint-initdb.d/seu_script.sql
 
   doasanguepoa:
-    image: doasanguepoa-front:1.0.0
+    image: leogoandete/doasanguepoa-front:latest
     container_name: doasanguepoa-front
+    hostname: doasanguepoa-front
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8080:80
     depends_on:
@@ -52,7 +55,7 @@ services:
       - postagemdb
 
   cadastro:
-    image: cadastro:1.0.0
+    image: leogoandete/cadastro:latest
     container_name: cadastro
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
@@ -71,7 +74,7 @@ services:
       - cadastrodb
 
   login:
-    image: login:1.0.0
+    image: leogoandete/login:latest
     container_name: login
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
