--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   doasanguepoa:
     image: leogoandete/doasanguepoa-front:latest
     container_name: doasanguepoa-front
-    hostname: doasanguepoa-front
+    hostname: doasanguepoafront
     volumes:
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
@@ -37,6 +37,7 @@ services:
   postagem:
     image: leogoandete/postagens:latest
     container_name: postagem
+    hostname: postagem
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://postagemdb:5432/postagemdb
       - QUARKUS_DATASOURCE_USERNAME=app_postagem
@@ -57,6 +58,7 @@ services:
   cadastro:
     image: leogoandete/cadastro:latest
     container_name: cadastro
+    hostname: cadastro
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
       - QUARKUS_DATASOURCE_USERNAME=app_cadastro
@@ -76,6 +78,7 @@ services:
   login:
     image: leogoandete/login:latest
     container_name: login
+    hostname: login
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
       - QUARKUS_DATASOURCE_USERNAME=app_cadastro
@@ -116,8 +119,8 @@ services:
 
   graylog:
     image: graylog/graylog:5.1
-    # ports:
-    #   - "9000:9000" # HTTP
+    ports:
+      - "9000:9000" # HTTP
     #   - "12201:12201/udp" # GELF UDP
     #   - "1514:1514" # GELF TCP
     environment:
