--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       MYSQL_ROOT_PASSWORD: hibernate
       MYSQL_USER: app_cadastro
       MYSQL_PASSWORD: k4d45tr0
+    networks:
+      - dados
     volumes:
       - ./sql/cadastro.sql:/docker-entrypoint-initdb.d/seu_script.sql
     # ports:
@@ -18,13 +20,18 @@ services:
     environment:
       POSTGRES_USER: app_postagem
       POSTGRES_PASSWORD: p0st4g3m
+    networks:
+      - dados
     volumes:
       - ./sql/postagem.sql:/docker-entrypoint-initdb.d/seu_script.sql
+      #- postagem_database:/var/lib/postgresql/data
 
   doasanguepoa:
     image: leogoandete/doasanguepoa-front:latest
-    container_name: doasanguepoa-front
+    container_name: doasanguepoa_front
     hostname: doasanguepoafront
+    networks:
+      - backend
     volumes:
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
@@ -38,6 +45,10 @@ services:
     image: leogoandete/postagens:latest
     container_name: postagem
     hostname: postagem
+    networks:
+      - backend
+      - monitoramento
+      - dados
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://postagemdb:5432/postagemdb
       - QUARKUS_DATASOURCE_USERNAME=app_postagem
@@ -59,6 +70,10 @@ services:
     image: leogoandete/cadastro:latest
     container_name: cadastro
     hostname: cadastro
+    networks:
+      - backend
+      - monitoramento
+      - dados
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
       - QUARKUS_DATASOURCE_USERNAME=app_cadastro
@@ -79,6 +94,10 @@ services:
     image: leogoandete/login:latest
     container_name: login
     hostname: login
+    networks:
+      - backend
+      - monitoramento
+      - dados
     environment:
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mysql://cadastrodb:3306/cadastrodb
       - QUARKUS_DATASOURCE_USERNAME=app_cadastro
@@ -105,6 +124,8 @@ services:
       - "14250:14250" # Receive from external otel-collector, optional
     environment:
       - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - monitoramento
 
   elasticsearch:
     image: elastic/elasticsearch:7.16.3
@@ -113,9 +134,13 @@ services:
     environment:
       ES_JAVA_OPTS: "-Xms512m -Xmx512m" # Use half of the available RAM
       discovery.type: "single-node" # Disable production mode
+    networks:
+      - monitoramento
 
   mongo:
     image: mongo:5.0
+    networks:
+      - monitoramento
 
   graylog:
     image: graylog/graylog:5.1
@@ -123,6 +148,8 @@ services:
       - "9000:9000" # HTTP
     #   - "12201:12201/udp" # GELF UDP
     #   - "1514:1514" # GELF TCP
+    networks:
+      - monitoramento
     environment:
       GRAYLOG_HTTP_EXTERNAL_URI: "http://127.0.0.1:9000/"
       # CHANGE ME (must be at least 16 characters)!
@@ -149,6 +176,8 @@ services:
       - -d
       - '{"title":"Application log input", "configuration":{"recv_buffer_size":262144, "bind_address":"0.0.0.0", "port":12201, "decompress_size_limit":8388608}, "type":"org.graylog2.inputs.gelf.udp.GELFUDPInput", "global":true}'
       - http://graylog:9000/api/system/inputs
+    networks:
+      - monitoramento
     depends_on:
       graylog:
         condition: service_healthy
@@ -158,6 +187,8 @@ services:
     user: root
     container_name: prometheus
     hostname: prometheus
+    networks:
+      - monitoramento
     restart: unless-stopped
     volumes:
       - ./config:/etc/prometheus
@@ -172,6 +203,8 @@ services:
     image: grafana/grafana
     container_name: grafana
     hostname: grafana
+    networks:
+      - monitoramento
     volumes:
       - ./config/prometheus_ds.yml:/etc/grafana/provisioning/datasources/prometheus_ds.yml
     environment:
@@ -179,3 +212,11 @@ services:
     restart: unless-stopped
     # ports:
     #   - 3000:3000
+
+networks:
+  backend:
+    driver: bridge
+  monitoramento:
+    driver: bridge
+  dados:
+    driver: bridge
